[gd_scene load_steps=12 format=2]

[ext_resource path="res://btnstylehover.tres" type="StyleBox" id=1]
[ext_resource path="res://btnstyle.tres" type="StyleBox" id=2]
[ext_resource path="res://btnstylepress.tres" type="StyleBox" id=3]
[ext_resource path="res://PlayMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.639216, 0.270588, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.00392157, 0.419608, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://acmesab.TTF"

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "ui_cancel"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="PlayMenu" type="Node2D"]
pause_mode = 2
position = Vector2( 686.172, 331.313 )
z_index = 1
script = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.5
margin_top = -40.0
margin_right = 155.5
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 26.0
margin_top = 18.0
margin_right = 285.0
margin_bottom = 61.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="PanelContainer/HBoxContainer"]
margin_right = 132.0
margin_bottom = 43.0
focus_next = NodePath("../ButtonExit")
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = " Start "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 136.0
margin_right = 156.0
margin_bottom = 43.0
rect_min_size = Vector2( 20, 20 )

[node name="ButtonExit" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 259.0
margin_bottom = 43.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 7 )
text = " Exit "

[connection signal="pressed" from="PanelContainer/HBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
